improve based on PR comments

--- a/app/templates/meetings/publish/publication-actions/index.hbs
+++ b/app/templates/meetings/publish/publication-actions/index.hbs
@@ -1,7 +1,7 @@
 <div class="au-o-box">
   <AuDataTable 
     @content={{this.model}}
-    @noDataMessage={{t "publish.no-excerpts-message"}}
+    @noDataMessage={{t "publish.no-publication-actions-message"}}
     @sort={{this.sort}}
     @page={{this.page}}
     @size={{this.pageSize}}
