--- a/app/components/signatures/timeline-step.hbs
+++ b/app/components/signatures/timeline-step.hbs
@@ -58,14 +58,14 @@
             {{else}}
               <div class="au-o-grid__item au-u-1-2@medium au-u-padding-bottom-none au-u-padding-bottom-small">
                 <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
-                <Signatures::SignedResource @signature={{signature}} @canDelete={{(and (not this.isPublished) this.isSignedByCurrentUser)}}/>
+                <Signatures::SignedResource @signature={{signature}} @canDelete={{not this.isPublished}}/>
               </div>
             {{/if}}
           {{/each}}
         {{else if (eq this.signaturesCount 1)}}
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
             <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.first-signature"}}</AuHeading>
-            <Signatures::SignedResource @signature={{this.activeSignatures.firstObject}} @canDelete={{(and (not this.isPublished) this.isSignedByCurrentUser)}} />
+            <Signatures::SignedResource @signature={{this.activeSignatures.firstObject}} @canDelete={{not this.isPublished}} />
           </div>
           <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
             <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t "timeline-step.second-signature"}}</AuHeading>
