--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -35,6 +35,14 @@
       {{limit-content this.title 70}} 
       <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >{{t "editor-document-title.change-title"}}</AuButton>
     </h1>
+    {{#if this.showSaved}}
+      <AuPill
+        @skin="success"
+        @icon="check"
+      >
+        {{t "editor-document-title.saved"}}
+      </AuPill>
+    {{/if}}
   {{/if}}
 
 {{/if}}
