add cursor default to the regulatory statements

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -696,6 +696,7 @@ div[typeof="besluit:Zitting"] {
 }
 
 div[typeof="besluitpublicatie:Documentonderdeel"] {
+  cursor: default;
   &:hover {
     border: 0.1rem solid var(--au-gray-400);
   }
