Chaged saved to title-saved

--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -40,7 +40,7 @@
         @skin="success"
         @icon="check"
       >
-        {{t "editor-document-title.saved"}}
+        {{t "editor-document-title.title-saved"}}
       </AuPill>
     {{/if}}
   {{/if}}
