--- a/app/components/editor-document-title.hbs
+++ b/app/components/editor-document-title.hbs
@@ -33,7 +33,7 @@
   {{else}}
     <h1 class="au-c-app-chrome__title au-c-app-chrome__title--edit" title={{this.title}}>
       {{limit-content this.title 70}} 
-      <AuButton {{on "click" this.toggleActive}} @icon="pencil" @skin="tertiary" @hideText={{true}} >{{t "editor-document-title.change-title"}}</AuButton>
+      <AuButton {{on "click" this.enableEdit}} @icon="pencil" @skin="tertiary" @hideText={{true}} >{{t "editor-document-title.change-title"}}</AuButton>
     </h1>
     {{#if this.showSaved}}
       <AuPill
