--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -73,7 +73,7 @@
     @plugins={{this.plugins}}
   >
     <:toolbar>
-      <BesluitTypePlugin::ToolbarDropdown @controller={{this.controller}}/>
+      <BesluitTypePlugin::ToolbarDropdown @controller={{this.controller}} @options={{this.config.besluitType}}/>
       <Plugins::Formatting::FormattingToggle @controller={{this.controller}}/>
     </:toolbar>
     <:sidebar-collapsible>
@@ -90,7 +90,7 @@
           @controller={{this.controller}}
           @options={{this.config.date}}
         />
-        <RoadsignRegulationPlugin::RoadsignRegulationCard @controller={{this.controller}}/>
+        <RoadsignRegulationPlugin::RoadsignRegulationCard @controller={{this.controller}} @options={{this.config.roadsignRegulation}}/>
         <StandardTemplatePlugin::Card @controller={{this.controller}}/>
         {{#if (feature-flag 'regulatoryStatements')}}
           <EditorPlugins::RegulatoryStatements::SidebarInsert @controller={{this.controller}}/>
@@ -110,7 +110,7 @@
       <RdfaDatePlugin::Card
         @controller={{this.controller}}
         @options={{this.config.date}}/>
-      <VariablePlugin::TemplateVariableCard @controller={{this.controller}}/>
+      <VariablePlugin::TemplateVariableCard @controller={{this.controller}} @options={{this.config.templateVariable}}/>
     </:sidebar>
   </RdfaEditorContainer>
 </div>
