add au-modal-container and disable deprecation warnings for modal wormhole version

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,6 +4,7 @@
     'Gelinkt Notuleren' (if this.showEnvironment (concat ' - ' this.environmentName))
   )
 }}
+<AuModalContainer />
 <AuApp class='{{if this.showEnvironment "au-c-app--environment"}}'>
   {{#if this.showEnvironment}}
     <EnvironmentBanner
