update plugins and rename besluit card

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -101,7 +101,7 @@
         @controller={{this.controller}}
         @options={{this.config.structures}}
       />
-      <BesluitPlugin::BesluitPluginCard @controller={{this.controller}}/>
+      <DecisionPlugin::DecisionPluginCard @controller={{this.controller}}/>
       <CitationPlugin::CitationCard
         @controller={{this.controller}}
         @plugin={{this.citationPlugin}}
