Enable changes not saved warning

--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -5,6 +5,7 @@
   @onTitleUpdate={{perform this.onTitleUpdate}}
   @allowTitleUpdate={{true}}
   @isRegulatoryStatement={{true}}
+  @dirty={{this.dirty}}
 >
   <:return-link>
   <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}} @icon="arrow-left">
