Fix problem with powerselect not appearing

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -730,3 +730,7 @@ div[typeof="besluitpublicatie:Documentonderdeel"] {
     background-color: #0000;
   }
 }
+
+#ember-basic-dropdown-wormhole {
+  z-index: 20000;
+}
