GN-4140: Endpoint config for CitationPlugin Card

--- a/app/templates/agendapoints/edit.hbs
+++ b/app/templates/agendapoints/edit.hbs
@@ -105,6 +105,7 @@
       <CitationPlugin::CitationCard
         @controller={{this.controller}}
         @plugin={{this.citationPlugin}}
+        @config={{this.config.citation}}
       />
       <ImportSnippetPlugin::Card @controller={{this.controller}}/>
       <RdfaDatePlugin::Card
