--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -94,6 +94,7 @@
       <CitationPlugin::CitationCard
         @controller={{this.controller}}
         @plugin={{this.citationPlugin}}
+        @config={{this.config.citation}}
       />
       <RdfaDatePlugin::Card
         @controller={{this.controller}}
