--- a/app/components/participation-list.hbs
+++ b/app/components/participation-list.hbs
@@ -1,5 +1,5 @@
 
-<div class="au-c-meeting-chrome-card au-u-margin-bottom-none" {{did-insert (perform this.fetchData)}}>
+<div class="au-c-meeting-chrome-card au-u-margin-bottom-none">
   <AuHeading @level="4" @skin="6" class="au-c-meeting-chrome-card__title">{{t "participation-list.block-title"}}</AuHeading>
   <ul class="au-c-list-divider">
     <li class="au-c-list-divider__item">
