--- a/app/templates/switch-login.hbs
+++ b/app/templates/switch-login.hbs
@@ -11,7 +11,7 @@
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
-            <AcmidmLogin />
+            {{!-- <AcmidmLogin /> --}}
             {{#if this.model}}
               <AuAlert @icon="alert-triangle" @title={{this.model}}  @skin="error" class="au-u-text-left" />
             {{/if}}
