--- a/app/components/application-header.hbs
+++ b/app/components/application-header.hbs
@@ -1,18 +1,22 @@
 <AuMainHeader @brandLink="https://www.vlaanderen.be/nl" @homeRoute="index" @appTitle="Gelinkt Notuleren" @contactRoute="contact">
   {{#if this.session.isAuthenticated}}
   <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
-    <Acmidm::Switch as |acmidm|>
+    {{!-- <Acmidm::Switch as |acmidm|>
       <AuButton @loading={{acmidm.isSwitching}} class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" acmidm.switch}}>
-        <AuIcon @icon="switch" @alignment="left" />{{t "application-header.switch-administrative-unit"}}
+        <AuIcon @icon="switch" @alignment="left" />{{t "auth.switch-administrative-unit"}}
       </AuButton>
-    </Acmidm::Switch>
+    </Acmidm::Switch> --}}
     <button type="button" class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" this.logout}}>
-      <AuIcon @icon="logout" @alignment="left" />{{t "application-header.logout"}}
+      <AuIcon @icon="logout" @alignment="left" />{{t "auth.logout"}}
     </button>
   </AuDropdown>
   {{else}}
-  <AcmidmLoginCompact @styles="au-c-button au-c-button--tertiary">
-    <AuIcon @icon="login" @alignment="left" />{{t "application-header.logout"}}
-  </AcmidmLoginCompact>
+  <AuLinkExternal 
+    href={{this.loginUrl}} 
+    target=""
+    @icon="login"
+    @iconAlignment="left"
+  >{{t "auth.login"}}
+  </AuLinkExternal>
   {{/if}}
 </AuMainHeader>
