--- a/app/components/application-header.hbs
+++ b/app/components/application-header.hbs
@@ -1,22 +1,19 @@
 <AuMainHeader @brandLink="https://www.vlaanderen.be/nl" @homeRoute="index" @appTitle="Gelinkt Notuleren" @contactRoute="contact">
   {{#if this.session.isAuthenticated}}
   <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
-    {{!-- <Acmidm::Switch as |acmidm|>
-      <AuButton @loading={{acmidm.isSwitching}} class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" acmidm.switch}}>
-        <AuIcon @icon="switch" @alignment="left" />{{t "auth.switch-administrative-unit"}}
-      </AuButton>
-    </Acmidm::Switch> --}}
-    <button type="button" class="au-c-button au-c-button--tertiary" role="menuitem" {{on "click" this.logout}}>
-      <AuIcon @icon="logout" @alignment="left" />{{t "auth.logout"}}
-    </button>
+    <AuLink @route="authorization.switch" @icon="switch" role="menuitem">
+      {{t "auth.switch-administrative-unit"}}
+    </AuLink>
+    <AuLink @route="authorization.logout" @icon="logout" role="menuitem">
+      {{t "auth.logout"}}
+    </AuLink>
   </AuDropdown>
   {{else}}
-  <AuLinkExternal 
-    href={{this.loginUrl}} 
-    target=""
+  <AuLink
+    @route='authorization.login'
     @icon="login"
-    @iconAlignment="left"
-  >{{t "auth.login"}}
-  </AuLinkExternal>
+  >
+    {{t "auth.login"}}
+  </AuLink>
   {{/if}}
 </AuMainHeader>
