--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -11,7 +11,9 @@
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-4@small au-u-1-2@medium au-u-text-right@medium">
-            <AuLinkExternal href={{this.loginUrl}} @skin="button" target="">{{t "auth.login"}}</AuLinkExternal>
+            <AuLink @route="authorization.login" @skin="button">
+              {{t "auth.login"}}
+            </AuLink>
           </div>
         </div>
       </div>
