--- a/app/templates/meetings/publish/uittreksels/show.hbs
+++ b/app/templates/meetings/publish/uittreksels/show.hbs
@@ -73,36 +73,44 @@
               {{!--            {{/if}}--}}
               {{#if this.firstSignature}}
                 <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
-                  <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t
-                    "timeline-step.first-signature"}}</AuHeading>
-                  <Signatures::SignedResource @signature={{this.firstSignature}} @canDelete={{not this.isPublished}} />
+                  <Signatures::SignedResource @signature={{this.firstSignature.model}} @canDelete={{not
+                    this.isPublished}} />
                 </div>
+              {{else}}
 
+                <AuButton
+                  {{on "click" this.showSigningModal}}
+                  @skin="secondary"
+                  @icon="pencil"
+                  @iconAlignment="left"
+                  @loading={{this.loading}}
+                  @disabled={{not this.canSignFirstSignature}}
+                >
+                  {{t "timeline-step.sign-button-label" name=(limit-content this.title 30)}}
+                </AuButton>
               {{/if}}
-              <AuButton
-                {{on "click" this.showSigningModal}}
-                @skin="secondary"
-                @icon="pencil"
-                @iconAlignment="left"
-                @loading={{this.loading}}
-                @disabled={{not this.canSignFirstSignature}}
-              >
-                {{t "timeline-step.sign-button-label" name=(limit-content this.title 30)}}
-              </AuButton>
             </div>
             <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
               <AuHeading @level="3" @skin="6" class="au-u-margin-bottom-tiny">{{t
                 "timeline-step.second-signature"}}</AuHeading>
-              <AuButton
-                {{on "click" this.showSigningModal}}
-                @skin="secondary"
-                @icon="pencil"
-                @iconAlignment="left"
-                @loading={{this.loading}}
-                @disabled={{not this.canSignSecondSignature}}
-              >
-                {{t "timeline-step.sign-button-label" name=(limit-content this.title 30)}}
-              </AuButton>
+              {{#if this.secondSignature}}
+                <div class="au-o-grid__item au-u-1-2@medium au-u-padding-top-none au-u-padding-bottom-small">
+                  <Signatures::SignedResource @signature={{this.secondSignature.model}} @canDelete={{not
+                    this.isPublished}} />
+                </div>
+
+              {{else}}
+                <AuButton
+                  {{on "click" this.showSigningModal}}
+                  @skin="secondary"
+                  @icon="pencil"
+                  @iconAlignment="left"
+                  @loading={{this.loading}}
+                  @disabled={{not this.canSignSecondSignature}}
+                >
+                  {{t "timeline-step.sign-button-label" name=(limit-content this.title 30)}}
+                </AuButton>
+              {{/if}}
             </div>
             <div class="au-o-grid__item au-u-padding-top-none au-u-padding-bottom-none">
               <AuHelpText @skin="secondary" class="au-u-margin-top-none">
