--- a/app/components/zitting-text-document-container.hbs
+++ b/app/components/zitting-text-document-container.hbs
@@ -10,12 +10,12 @@
   @plugins={{this.plugins}}
   @nodeViews={{this.nodeViews}}
 >
-  <:sidebar-collapsible>
+  <:sidebarCollapsible>
     <RdfaDatePlugin::Insert
       @controller={{this.editor}}
       @options={{this.config.date}}
     />
-  </:sidebar-collapsible>
+  </:sidebarCollapsible>
   <:sidebar>
     <RdfaDatePlugin::Card
       @controller={{this.editor}}
