--- a/app/templates/regulatory-statements/edit/history.hbs
+++ b/app/templates/regulatory-statements/edit/history.hbs
@@ -1,4 +1,4 @@
-{{page-title "History"}}
+{{page-title (t "regulatory-statement.history")}}
 <DocumentHistory 
   @documentContainerId={{this.model.documentContainer.id}}
   @currentVersion={{this.model.editorDocument}}
