--- a/app/components/application-header.hbs
+++ b/app/components/application-header.hbs
@@ -1,6 +1,7 @@
 <AuMainHeader @brandLink="https://www.vlaanderen.be/nl" @homeRoute="index" @appTitle="Gelinkt Notuleren" @contactRoute="contact">
   {{#if this.session.isAuthenticated}}
   <AuDropdown @title="{{this.currentSession.user.voornaam}} {{this.currentSession.user.achternaam}} - {{this.currentSession.group.classificatie.label}} {{this.currentSession.group.naam}}" @buttonLabel="Account settings" @alignment="right">
+    {{!-- template-lint-disable require-context-role --}}
     <AuLink @route="authorization.switch" @icon="switch" role="menuitem">
       {{t "auth.switch-administrative-unit"}}
     </AuLink>
