--- a/app/templates/agendapoints/attachments.hbs
+++ b/app/templates/agendapoints/attachments.hbs
@@ -2,9 +2,9 @@
   @editorDocument={{this.editorDocument}}
   @documentContainer={{this.documentContainer}}
 >
-  <:return-link>
+  <:returnLink>
     <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
-  </:return-link>
+  </:returnLink>
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
     <AuButton @disabled={{true}} @skin="naked" @icon="nav-up-down" @iconAlignment="right" class="au-u-padding-tiny"><span class="au-u-h-functional au-u-regular">{{t "utils.file-options"}}</span></AuButton>
