--- a/app/templates/agendapoints/revisions.hbs
+++ b/app/templates/agendapoints/revisions.hbs
@@ -2,13 +2,14 @@
   @editorDocument={{this.revisionDetail}}
   @documentContainer={{this.documentContainer}}
 >
-  <:return-link>
+  <:returnLink>
     <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
-  </:return-link>
+  </:returnLink>
 
   <:actions>
     <AgendapointMenu @documentContainer={{this.documentContainer}} />
     <AuDropdown @title={{t "utils.file-options"}} @buttonLabel={{t "utils.file-options"}} @alignment="right">
+      {{!-- template-lint-disable require-context-role --}}
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
         <AuIcon @icon="export" @alignment="left" />
         {{t "utils.html-export"}}
