--- a/app/templates/agendapoints/show.hbs
+++ b/app/templates/agendapoints/show.hbs
@@ -2,11 +2,12 @@
   @editorDocument={{this.model.editorDocument}}
   @documentContainer={{this.model.documentContainer}}
   >
-  <:return-link>
+  <:returnLink>
     <AgendapointBackLink @meetingId={{this.model.returnToMeeting}} />
-  </:return-link>
+  </:returnLink>
   <:actions>
     <AuDropdown @title={{t "utils.file-options"}} @buttonLabel={{t "utils.file-options"}} @alignment="right">
+      {{!-- template-lint-disable require-context-role --}}
       {{#unless this.readOnly}}
         <AuButton {{on "click" (perform this.copyAgendapunt)}} @skin="tertiary" role="menuitem">
           <AuIcon @icon="copy" @alignment="left" />
