--- a/app/templates/irg-archive/show.hbs
+++ b/app/templates/irg-archive/show.hbs
@@ -3,14 +3,15 @@
   @editorDocument={{this.model.editorDocument}}
   @documentContainer={{this.model.documentContainer}}
 >
-  <:return-link>
+  <:returnLink>
   <AuLink @route="inbox.irg-archive">
     <AuIcon @icon="arrow-left" @alignment="left" />
     {{t 'inbox.irg-archive.return'}}
   </AuLink>
-  </:return-link>
+  </:returnLink>
   <:actions>
   <AuDropdown @title={{t "utils.file-options"}} @buttonLabel={{t "utils.file-options"}} @alignment="right">
+    {{!-- template-lint-disable require-context-role --}}
     <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
       <AuIcon @icon="export" @alignment="left" />
       {{t "utils.html-export"}}
