--- a/app/templates/regulatory-statements/edit.hbs
+++ b/app/templates/regulatory-statements/edit.hbs
@@ -1,4 +1,4 @@
-{{page-title "reglementaire bijlage"}}
+{{page-title (t "regulatory-statement.page-title")}}
 <AppChrome
   @editorDocument={{this.editorDocument}}
   @documentContainer={{this.documentContainer}}
@@ -7,12 +7,12 @@
   @isRegulatoryStatement={{true}}
   @dirty={{this.dirty}}
 >
-  <:return-link>
+  <:returnLink>
   <AuLink @route="inbox.regulatory-statements" @model={{@meetingId}} @icon="arrow-left">
       {{t 'inbox.regulatory-statements.return'}}
     </AuLink>
-  </:return-link>
-  <:actions-after-title>
+  </:returnLink>
+  <:actionsAfterTitle>
     <AuDropdown @title={{t 'utils.current-version'}} @buttonLabel={{t 'utils.current-version'}} @alignment="left">
       <p class="au-u-padding-small regulatory-statement-current-version-container-active">
         <span class="au-u-medium au-u-margin-right-large">{{t 'utils.current-version'}}: </span>
@@ -26,6 +26,7 @@
       >
         <p class="au-u-muted au-u-medium au-u-padding-tiny au-u-padding-left-small">{{t 'utils.history'}}</p>
         {{#each this.revisions as |revision|}}
+          {{!-- template-lint-disable require-context-role --}}
           <AuLink @route="regulatory-statements.revisions" @skin="secondary" class="au-u-padding-tiny au-u-padding-left-small" role="menuitem" @models={{array this.documentContainer.id revision.id}}>
             {{human-friendly-date revision.updatedOn locale=this.intl.primaryLocale}}
             {{#if revision.status.label}}
@@ -38,9 +39,10 @@
         </AuLink>
       </div>
     </AuDropdown>
-  </:actions-after-title>
+  </:actionsAfterTitle>
   <:actions>
     <AuDropdown @title={{t "utils.file-options"}} @buttonLabel={{t "utils.file-options"}} @alignment="right">
+      {{!-- template-lint-disable require-context-role --}}
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
         <AuIcon @icon="export" @alignment="left" />
         {{t "utils.html-export"}}
@@ -70,7 +72,7 @@
       <Plugins::Formatting::FormattingToggle @controller={{this.controller}}/>
       <TableOfContentsPlugin::ToolbarButton @controller={{this.controller}}/>
     </:toolbar>
-    <:sidebar-collapsible>
+    <:sidebarCollapsible>
       <ArticleStructurePlugin::ArticleStructureCard
         @controller={{this.controller}}
         @options={{this.config.structures}}
@@ -85,7 +87,7 @@
         @options={{this.config.date}}
       />
       <StandardTemplatePlugin::Card @controller={{this.controller}}/>
-    </:sidebar-collapsible>
+    </:sidebarCollapsible>
     <:sidebar>
       <ArticleStructurePlugin::StructureCard
         @controller={{this.controller}}
