--- a/app/templates/regulatory-statements/revisions.hbs
+++ b/app/templates/regulatory-statements/revisions.hbs
@@ -3,12 +3,12 @@
   @documentContainer={{this.model.documentContainer}}
   @documentStatus={{this.model.editorDocument.status}}
 >
-  <:return-link>
+  <:returnLink>
     <AuLink @route={{if (or this.model.currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}} @model={{this.model.documentContainer.id}} @icon="arrow-left">
       {{t 'inbox.regulatory-statements.revisions-return'}}
     </AuLink>
-  </:return-link>
-  <:actions-after-title>
+  </:returnLink>
+  <:actionsAfterTitle>
     <AuDropdown @title={{human-friendly-date this.model.editorDocument.updatedOn locale=this.intl.primaryLocale}} @buttonLabel={{human-friendly-date
       this.model.editorDocument.updatedOn locale=this.intl.primaryLocale}} @alignment="left">
       <LinkTo @route="{{if (or this.model.currentVersion.status (not this.currentSession.canWrite)) 'regulatory-statements.show' 'regulatory-statements.edit'}}" @model={{this.model.documentContainer.id}}
@@ -20,6 +20,7 @@
       <div class="au-u-flex--column au-u-flex">
         <p class="au-u-muted au-u-medium au-u-padding-tiny au-u-padding-left-small">{{t 'utils.history'}}: </p>
         {{#each this.revisions as |revision|}}
+          {{!-- template-lint-disable require-context-role --}}
           <AuLink @route="regulatory-statements.revisions" @skin="secondary" class="au-u-padding-tiny au-u-padding-left-small" role="menuitem" @models={{array
             this.model.documentContainer.id revision.id}}>
             {{human-friendly-date revision.updatedOn locale=this.intl.primaryLocale}}
@@ -33,9 +34,10 @@
         </AuLink>
       </div>
     </AuDropdown>
-  </:actions-after-title>
+  </:actionsAfterTitle>
   <:actions>
     <AuDropdown @title={{t "utils.file-options"}} @buttonLabel={{t "utils.file-options"}} @alignment="right">
+      {{!-- template-lint-disable require-context-role --}}
       <AuButton {{on "click" this.download}} @skin="tertiary" role="menuitem">
         <AuIcon @icon="export" @alignment="left"/>
         {{t "utils.html-export"}}
